--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
-  "name": "websockets_frontend",
+  "name": "ic_websockets_example",
   "version": "0.1.0",
+  "type": "module",
   "description": "Internet Computer starter application",
-  "keywords": ["Internet Computer", "Motoko", "JavaScript", "Canister"],
+  "keywords": [
+    "Internet Computer",
+    "Motoko",
+    "JavaScript",
+    "Canister"
+  ],
   "scripts": {
     "build": "webpack",
     "prebuild": "npm run generate",
-    "start": "webpack serve --mode development --env development",
+    "start:client": "parcel src/frontend/src/index.html",
+    "prestart:server": "npm run generate; node setupEnv.cjs",
+    "start:server": "NODE_ENV=development nodemon -r dotenv/config --es-module-specifier-resolution=node src/websockets_server/index.js",
     "prestart": "npm run generate",
-    "generate": "dfx generate websockets_backend"
+    "generate": "dfx-dev generate event_stack"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.13.0",
-    "@dfinity/candid": "0.13.0",
-    "@dfinity/principal": "0.13.0",
+    "@dfinity/agent": "0.13.1",
+    "@dfinity/candid": "0.13.1",
+    "@dfinity/principal": "0.13.1",
     "assert": "2.0.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "6.0.3",
+    "crypto-browserify": "^3.12.0",
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
+    "parcel": "^2.7.0",
     "process": "0.11.10",
+    "querystring-es3": "^0.2.1",
     "stream-browserify": "3.0.0",
+    "stream-http": "^3.2.0",
     "terser-webpack-plugin": "^5.3.3",
+    "timers-browserify": "^2.0.12",
+    "url": "^0.11.0",
     "util": "0.12.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
@@ -34,5 +49,13 @@
     "last 2 firefox version",
     "last 2 safari version",
     "last 2 edge version"
-  ]
+  ],
+  "dependencies": {
+    "browser-websocket": "^2.2.0",
+    "dotenv": "^16.0.1",
+    "fs": "^0.0.1-security",
+    "path-browserify": "^1.0.1",
+    "socket.io": "^4.5.1",
+    "ws": "^8.8.1"
+  }
 }
